--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 fastapi = "^0.109.2"
 sqlalchemy = "^2.0.27"
 uvicorn = "^0.27.1"
+psycopg2-binary = "^2.9.9"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
