Added user role CRUD for company and film

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql+psycopg2://ifnklvis:CNx3F5RdFnj2Lm-PiGQ9JJSGhqUEl7QJ@stampy.db.elephantsql.com/ifnklvis
+DATABASE_URL=postgresql://pipayzvt:eWJzcmjyr-3KId1Hci11hfVcXyJsI0kw@ruby.db.elephantsql.com/pipayzvt
