--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ sqlalchemy = "^2.0.27"
 uvicorn = "^0.27.1"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
+alembic = "^1.13.1"
 
 [build-system]
 requires = ["poetry-core"]
